--- a/src/cinnamon/scss/_extends.scss
+++ b/src/cinnamon/scss/_extends.scss
@@ -1,73 +1,73 @@
 //  extend-elements
 
-// vertical gradient dark to light
-%bg-grad-vert-dark-to-light {
+// to bottom
+%bg-grad-to-bottom {
     background-gradient-direction: vertical;
-    background-gradient-start: $dark_bg_color_grad;
-    background-gradient-end: $bg_color_grad;
+    background-gradient-start: $dark_bg_grad;
+    background-gradient-end: $light_bg_grad;
 }
 
-// button vertical gradient dark to light
-%button-bg-grad-vert-dark-to-light {
+// button to bottom
+%button-bg-grad-to-bottom {
     background-gradient-direction: vertical;
-    background-gradient-start: $button_bg_color_grad;
-    background-gradient-end: $bg_color_grad_alt2;
+    background-gradient-start: $dark_button_bg_grad;
+    background-gradient-end: $light_button_bg_grad;
 }
 
-// vertical gradient light to dark
-%bg-grad-vert-light-to-dark {
+// to top
+%bg-grad-to-top {
     background-gradient-direction: vertical;
-    background-gradient-start: $bg_color_grad;
-    background-gradient-end: $dark_bg_color_grad;
+    background-gradient-start: $light_bg_grad;
+    background-gradient-end: $dark_bg_grad;
 }
 
-// vertical gradient selected to light
-%bg-grad-vert-selected-to-light {
+// selected to bottom
+%selected-bg-grad-to-bottom {
     background-gradient-direction: vertical;
-    background-gradient-start: $selected_bg_color_grad;
-    background-gradient-end: $bg_color_grad_alt1;
+    background-gradient-start: $dark_selected_bg_grad;
+    background-gradient-end: $light_selected_bg_grad;
 }
 
-// vertical gradient light to selected
-%bg-grad-vert-light-to-selected {
+// selected to top
+%selected-bg-grad-to-top {
     background-gradient-direction: vertical;
-    background-gradient-start: $bg_color_grad_alt1;
-    background-gradient-end: $selected_bg_color_grad;
+    background-gradient-start: $light_selected_bg_grad;
+    background-gradient-end: $dark_selected_bg_grad;
 }
 
-// horizontal gradient dark to light
-%bg-grad-horiz-dark-to-light {
+// to right
+%bg-grad-to-right {
     background-gradient-direction: horizontal;
-    background-gradient-start: $dark_bg_color_grad;
-    background-gradient-end: $bg_color_grad;
+    background-gradient-start: $dark_bg_grad;
+    background-gradient-end: $light_bg_grad;
 }
 
-// horizontal gradient light to dark
-%bg-grad-horiz-light-to-dark {
+// to left
+%bg-grad-to-left {
     background-gradient-direction: horizontal;
-    background-gradient-start: $bg_color_grad;
-    background-gradient-end: $dark_bg_color_grad;
+    background-gradient-start: $light_bg_grad;
+    background-gradient-end: $dark_bg_grad;
 }
 
-// horizontal gradient selected to light
-%bg-grad-horiz-selected-to-light {
+// selected to right
+%selected-bg-grad-to-right {
     background-gradient-direction: horizontal;
-    background-gradient-start: $selected_bg_color_grad;
-    background-gradient-end: $bg_color_grad_alt1;
+    background-gradient-start: $dark_selected_bg_grad;
+    background-gradient-end: $light_selected_bg_grad;
 }
 
-// horizontal gradient light to selected
-%bg-grad-horiz-light-to-selected {
+// selected to left
+%selected-bg-grad-to-left {
     background-gradient-direction: horizontal;
-    background-gradient-start: $bg_color_grad_alt1;
-    background-gradient-end: $selected_bg_color_grad;
+    background-gradient-start: $light_selected_bg_grad;
+    background-gradient-end: $dark_selected_bg_grad;
 }
 
 
 // used in selectors
 // .osd-window, .info-osd, .info-osd
 %osd-shared {
-    @extend %bg-grad-vert-dark-to-light;
+    @extend %bg-grad-to-bottom;
     border: 1px solid $borders_color;
 	border-radius: $roundness;
 	color: $dark_fg_color;
@@ -97,7 +97,7 @@
 	color: $dark_fg_color;
 	padding: 10px;
 	border: 1px solid $borders_color;
-	@extend %bg-grad-horiz-dark-to-light;
+	@extend %bg-grad-to-right;
 }
 
 // used in selectors
@@ -114,7 +114,7 @@
 	padding: 10px;
 	border: 1px solid $borders_color;
 	border-radius: $roundness;
-	@extend %button-bg-grad-vert-dark-to-light;
+	@extend %button-bg-grad-to-bottom;
 	text-align: center;
 	color: $button_fg_color;
 }
@@ -139,7 +139,7 @@
 	padding: 10px;
 	border: 1px solid $borders_color;
 	border-radius: $roundness;
-    @extend %bg-grad-horiz-dark-to-light;
+    @extend %bg-grad-to-right;
 	color: $dark_fg_color;
 }
 
@@ -175,7 +175,7 @@
 	margin: 0.5em 0;
 	border-radius: $roundness;
 	border: 1px solid $borders_color;
-	@extend %bg-grad-vert-dark-to-light;
+	@extend %bg-grad-to-bottom;
 }
 
 // used in selectors
@@ -188,28 +188,28 @@
 // used in selectors
 // .panel-top .window-list-item-box:active, .panel-top .window-list-item-box:checked, .panel-top .window-list-item-box:focus
 %panel-top-shared {
-    @extend %bg-grad-vert-light-to-selected;
+    @extend %selected-bg-grad-to-top;
 	color: $selected_fg_color;
 }
 
 // used in selectors
 // .panel-bottom .windows-list-item-box:active, .panel-bottom .window-list-item-box:checked, .panel-bottom .window-list-item-box:focus
 %panel-bottom-shared {
-    @extend %bg-grad-vert-selected-to-light;
+    @extend %selected-bg-grad-to-bottom;
 	color: $selected_fg_color;
 }
 
 // used in selectors
 // .panel-left .window-list-item-box:active, .panel-left .window-list-item-box:checked, .panel-left .window-list-item-box:focus
 %panel-left-shared {
-    @extend %bg-grad-horiz-light-to-selected;
+    @extend %selected-bg-grad-to-left;
 	color: $selected_fg_color;
 }
 
 // used in selectors
 // .panel-right .windows-list-item-box:active, .panel-right .window-list-item-box:checked, .panel-right .window-list-item-box:focus
 %panel-right-shared {
-    @extend %bg-grad-horiz-selected-to-light;
+    @extend %selected-bg-grad-to-right;
 	color: $selected_fg_color;
 }
 
