--- a/src/cinnamon/scss/sections/_dialogs.scss
+++ b/src/cinnamon/scss/sections/_dialogs.scss
@@ -1,7 +1,7 @@
 .modal-dialog {
 	border: 1px solid $borders_color;
 	border-radius: $roundness;
-    @extend %bg-grad-horiz-dark-to-light;
+    @extend %bg-grad-to-right;
 	color: $dark_fg_color;
 	padding: 20px 30px;
 }
@@ -13,7 +13,7 @@
 	padding: 10px;
 	border: 1px solid $borders_color;
 	border-radius: $roundness;
-    @extend %button-bg-grad-vert-dark-to-light;
+    @extend %button-bg-grad-to-bottom;
 	margin-left: 10px;
 	margin-right: 10px;
 	padding: 4px 32px 5px;
