--- a/src/cinnamon/scss/sections/_overview.scss
+++ b/src/cinnamon/scss/sections/_overview.scss
@@ -14,7 +14,7 @@
 	padding: 10px;
 	border: 1px solid $borders_color;
 	border-radius: $roundness;
-    @extend %bg-grad-horiz-dark-to-light;
+    @extend %bg-grad-to-right;
 	&:rtl {
 	}
 }
@@ -50,12 +50,12 @@
 	padding: 10px;
 	border: 1px solid $borders_color;
 	border-radius: $roundness;
-    @extend %bg-grad-vert-dark-to-light;
+    @extend %bg-grad-to-bottom;
 	padding: 2px 8px;
 	color: $dark_fg_color;
 	-cinnamon-caption-spacing: 4px;
 	&#selected {
-        @extend %bg-grad-vert-selected-to-light;
+        @extend %selected-bg-grad-to-bottom;
 		color: $selected_fg_color;
 	}
 }
@@ -90,8 +90,8 @@
 }
 .expo-background {
     background-gradient-direction: radial;
-    background-gradient-start: $bg_color_grad;
-    background-gradient-end: $dark_bg_color_grad;
+    background-gradient-start: $light_bg_grad;
+    background-gradient-end: $dark_bg_grad;
 }
 .expo-workspace-thumbnail-frame {
 	border: 1px solid $borders_color;
@@ -103,7 +103,7 @@
 	padding: 10px;
 	border: 1px solid $borders_color;
 	border-radius: $roundness;
-    @extend %bg-grad-vert-dark-to-light;
+    @extend %bg-grad-to-bottom;
 	selected-color: $selected_fg_color;
 	selection-background-color: $selected_bg_color;
 	color: $dark_fg_color;
@@ -112,7 +112,7 @@
 	text-align: center;
 	&#selected {
 		color: $selected_fg_color;
-        @extend %bg-grad-vert-selected-to-light;
+        @extend %selected-bg-grad-to-bottom;
 		selected-color: $dark_fg_color;
 		selection-background-color: $selected_bg_color;
 		border: 1px solid $selected_borders_color;
