--- a/src/cinnamon/scss/sections/_accessibility.scss
+++ b/src/cinnamon/scss/sections/_accessibility.scss
@@ -4,24 +4,19 @@
 .keyboard-key {
 	min-height: 1.5em;
 	min-width: 2.5em;
-	@extend %bg-grad-to-bottom;
-	border-radius: $roundness;
-	border: 1px solid $fg_color;
-	color: $fg_color;
+	@extend %shared-button;
 	&:grayed {
 		color: $selected_fg_color;
 		border-color: $selected_fg_color;
 	}
 	&:checked {
-		border-color: $selected_bg_color;
+		border-color: $selected_borders_color;
 	}
 	&:hover {
-		border-color: $selected_bg_color;
+		border-color: $selected_borders_color;
 	}
 	&:active {
-		background-color: $selected_bg_color;
-		border: 1px solid $selected_bg_color;
-		color: $selected_fg_color;
+		@extend %shared-button-active;
 	}
 }
 .keyboard-layout {
