--- a/src/cinnamon/scss/sections/_panel.scss
+++ b/src/cinnamon/scss/sections/_panel.scss
@@ -236,7 +236,7 @@
 	background: $selected_bg_color;
 }
 .applet-separator-line-vertical {
-	border-color: $selected_borders_color;
+	border-color: $selected_bg_color;
 	border-bottom: 2px solid;
 }
 .applet-spacer:highlight {
@@ -333,7 +333,7 @@
 	}
 	.progress {
 		background-color: $success_color;
-		border: 1px solid $borders_color;
+		border: 1px solid $selected_borders_color;
 		border-radius: $roundness;
 	    color: info_fg_color;
 	}
