--- a/src/cinnamon/scss/sections/_dialogs.scss
+++ b/src/cinnamon/scss/sections/_dialogs.scss
@@ -14,7 +14,7 @@
 	margin-right: 10px;
 	padding: 4px 32px 5px;
 	&:hover {
-		border: 1px solid $selected_borders_color;
+	    @extend %shared-button-hover;	
 	}
 	&:focus {
 		color: $selected_fg_color;
