Cinnamon Theme - Fix to undecorated desklet theming and fix to calender theming highlighted by random color builds

--- a/src/cinnamon/scss/_extends.scss
+++ b/src/cinnamon/scss/_extends.scss
@@ -99,7 +99,7 @@
 }
 
 // used in selectors
-// .desklet, .desklet-with-borders, .desklet-with-borders-and-header, .desklet-header, .photoframe-box
+// .desklet-with-borders, .desklet-with-borders-and-header, .desklet-header, .photoframe-box
 %desklet-shared {
 	color: $dark_fg_color;
 	padding: 10px;
