--- a/src/cinnamon/scss/sections/_calendar.scss
+++ b/src/cinnamon/scss/sections/_calendar.scss
@@ -1,9 +1,11 @@
-// calendar applet
+// the calendar displayed by the calendar applet is a heavily modified menu and inherits from the .menu selectosr
+// indivudual elements within the menu can be themed seperately with these selectors
 .calendar {
 	padding: 1em 1.75em;
 	spacing-rows: 1px;
 	spacing-columns: 5px;
 }
+// also covers the year label
 .calendar-month-label {
 	color: $dark_fg_color;
 	font-size: 0.8em;
@@ -14,28 +16,30 @@
 }
 .calendar-change-month-back {
 	@extend %calendar-shared;
+	border: 1px solid transparent;
 	background-image: url(assets/calendar-arrow-left.svg);
 	&:rtl {
 		background-image: url(assets/calendar-arrow-right.svg);
 	}
 	&:hover {
-		background-color: $selected_bg_color;
+		border: 1px solid $selected_bg_color;
 	}
 	&:active {
-		background-color: $dark_bg_color;
+		background-color: $selected_bg_color;
 	}
 }
 .calendar-change-month-forward {
 	@extend %calendar-shared;
+	border: 1px solid transparent;
 	background-image: url(assets/calendar-arrow-right.svg);
 	&:rtl {
 		background-image: url(assets/calendar-arrow-left.svg);
 	}
 	&:hover {
-		background-color: $selected_bg_color;
+		border: 1px solid $selected_bg_color;
 	}
 	&:active {
-		background-color: $dark_bg_color;
+		background-color: $selected_bg_color;
 	}
 }
 .datemenu-date-label {
