--- a/src/cinnamon/scss/_global.scss
+++ b/src/cinnamon/scss/_global.scss
@@ -2,8 +2,6 @@
 
 // main colors used in theme
 // %CINNAMON_OPACITY% < 1 will result in most cinnamon surfaces being transparent
-$bg_color: fade-out(#%BG%, 1 - %CINNAMON_OPACITY%);
-$fg_color: #%FG%;
 $button_bg_color: #%BTN_BG%;
 $button_fg_color: #%BTN_FG%;
 $selected_bg_color: #%SEL_BG%;
@@ -42,17 +40,17 @@ $light_tooltip_bg_grad: if($lighten_amount > 1, lighten($tooltip_bg_color, ($lig
 $dark_tooltip_bg_grad: if($darken_amount < 1, darken($tooltip_bg_color, (1 - $darken_amount) * lightness($tooltip_bg_color)), $tooltip_bg_color); 
 
 // borders used throughout theme Buttons also use selected_borders_color
-$selected_borders_color: mix($bg_color, $selected_bg_color, if(lightness($bg_color) < 50%, 18%, 10%));
-$borders_color: mix($bg_color, $fg_color, if(lightness($bg_color) < 50%, 18%, 10%));
+$selected_borders_color: mix($dark_bg_color, $selected_bg_color, if(lightness($dark_bg_color) < 50%, 18%, 10%));
+$borders_color: mix($dark_bg_color, $dark_fg_color, if(lightness($dark_bg_color) < 50%, 18%, 10%));
 
 // borders for buttons
 $button_border_strength: .1;
 $button_border: fade-out($button_fg_color, .06 + $button_border_strength);
 
 // scrollbar colors
-$scrollbar_bg_color:  darken($bg_color, 5%);
-$scrollbar_slider_color: mix($bg_color, $fg_color, 20%);
-$scrollbar_slider_hover_color: mix($bg_color, $selected_bg_color, 20%);
+$scrollbar_bg_color:  darken($dark_bg_color, 5%);
+$scrollbar_slider_color: mix($dark_bg_color, $dark_fg_color, 20%);
+$scrollbar_slider_hover_color: mix($dark_bg_color, $selected_bg_color, 20%);
 
 // caret colors for dialog entrys
 $primary_caret_color: #%CARET1_FG%;
@@ -68,4 +66,3 @@ $info_bg_color: #%TERMINAL_COLOR12%;
 
 // used for border-radius throughout theme
 $roundness: %ROUNDNESS%px;
-
