Cinnamon Theme - on screen keyboard always transparent background

--- a/src/cinnamon/scss/sections/_accessibility.scss
+++ b/src/cinnamon/scss/sections/_accessibility.scss
@@ -1,6 +1,6 @@
 // on screen keyboard
 #keyboard {
-	@extend %bg-grad-to-bottom;
+	background-color: $dark_bg_color_trans;
 }
 .keyboard-key {
 	min-height: 1.5em;
