--- a/src/cinnamon/scss/sections/_menu.scss
+++ b/src/cinnamon/scss/sections/_menu.scss
@@ -78,27 +78,13 @@
 .popup-combobox-item {
 	spacing: 1em;
 }
-// sliders and seperators in menus
+// sliders and separators in menus
 .popup-separator-menu-item {
-	-gradient-height: 3px;
+	@extend %separator-shared;
 	-gradient-direction: horizontal;
-	-gradient-start: $selected_bg_color;
-	-gradient-end: $dark_bg_color;
-	-margin-horizontal: 1em;
-	height: 1em;
 }
 .popup-slider-menu-item {
-	height: 1em;
-	min-width: 15em;
-	color: $dark_fg_color;
-	-slider-height: 0.7em;
-	-slider-background-color: $dark_bg_color;
-	-slider-border-color: $dark_bg_color;
-	-slider-active-background-color: $selected_bg_color;
-	-slider-active-border-color: $dark_bg_color;
-	-slider-border-width: 1px;
-	-slider-border-radius: 0.3em;
-	-slider-handle-radius: 0.7em;
+	@extend %slider-shared;
 }
 .popup-device-menu-item {
 	spacing: .5em;
