--- a/src/cinnamon/scss/sections/_panel.scss
+++ b/src/cinnamon/scss/sections/_panel.scss
@@ -390,17 +390,7 @@
 		}
 	}
 	.slider {
-		height: 1em;
-		min-width: 15em;
-		color: $dark_fg_color;
-		-slider-height: 0.7em;
-		-slider-background-color: $dark_bg_color;
-		-slider-border-color: $dark_bg_color;
-		-slider-active-background-color: $selected_bg_color;
-		-slider-active-border-color: $dark_bg_color;
-		-slider-border-width: 1px;
-		-slider-border-radius: 0.3em;
-		-slider-handle-radius: 0.7em;
+		@extend %slider-shared;
 	}
 	StBoxLayout {
 		spacing: 0.5em;
